# substrate-api-client

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
client-keystore/: Cargo.toml
compose-macros/: Cargo.toml
node-api/: Cargo.toml
node-api/src/: error.rs
primitives/: Cargo.toml
src/: lib.rs
src/std/rpc/ws_client/: mod.rs
test-no-std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
